# Backpack

./: .gitignore  CMakeLists.txt  README.md
Inituari_Engine/: Inituari_Engine.sln
Inituari_Engine/Inituari_Engine/: Inituari_Engine.cpp  Inituari_Engine.vcxproj  Inituari_Engine.vcxproj.filters
backpack/: main.cpp  unit_tests.cpp  unit_tests.h
diagram/: .$Untitled Diagram.drawio.bkp  .$Untitled Diagram.drawio.dtmp  Inituari_Class_Diagram.zargo~  Untitled Diagram.drawio
framework/: CMakeLists.txt  main.cpp
framework/framework/: main.cpp  unit_tests.cpp  unit_tests.h
gungame/: CMakeLists.txt
gungame/gungame/: main.cpp
libbackpack/: CMakeLists.txt
libbackpack/backpack/: backpack.h
libbackpack/backpack/containers/: array_list.h
libbackpack/backpack/core/: debug.cpp  engine.cpp  engine.h  hashing.cpp  hashing.h  types.h
libbackpack/backpack/math/: mat3.cpp  mat3.h  mat4.cpp  mat4.h  math.cpp  math.h  vector2.h  vector3.h  vector4.h
libbackpack/backpack/memory/: MallocAllocator.cpp  MallocAllocator.h  PoolAllocator.cpp  PoolAllocator.h  allocators.cpp  allocators.h  memory_tools.h
libbackpack/backpack/subsystems/: log_manager.h  logger.cpp  logger.h  memory_manager.cpp  memory_manager.h  subsystem_manager.cpp  subsystem_manager.h
libbackpack/backpack/world/: objectlookup.h  updateloop.h  world.cpp  world.h
src/: benchmarks.cpp  benchmarks.h  engine.h  main.cpp  unit_tests.cpp  unit_tests.h
src/Containers/: CMakeLists.txt  array_list.h
src/Inituari_Engine/: Inituari_Engine.vcxproj  Inituari_Engine.vcxproj.filters  debug.cpp  debug.h  engine.cpp  engine.h  main.cpp  types.h  unit_tests.cpp  unit_tests.h
src/Inituari_Engine/Containers/: array_list.h  container_types.h
src/Inituari_Engine/Math/: mat3.cpp  mat3.h  mat4.cpp  mat4.h  math.cpp  math.h  math_types.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h  vector4.cpp  vector4.h
src/Inituari_Engine/Memory/: MallocAllocator.cpp  MallocAllocator.h  PoolAllocator.cpp  PoolAllocator.h  allocators.cpp  allocators.h  memory_tools.h
src/Inituari_Engine/Subsystems/: log_manager.cpp  log_manager.h  memory_manager.cpp  memory_manager.h  subsystem_manager.cpp  subsystem_manager.h  subsystem_types.h
src/Math/: mat3.cpp  mat3.h  mat4.cpp  mat4.h  math.cpp  math.h  vector3.h  vector4.h
src/Memory/: PoolAllocator.cpp  allocators.cpp  allocators.h
src/Subsystems/: log_manager.cpp  log_manager.h  memory_manager.cpp  memory_manager.h  subsystem_manager.cpp  subsystem_manager.h
systems/: CMakeLists.txt
systems/core/: CMakeLists.txt  debug.cpp  debug.h  engine.cpp  os.h  types.h
systems/core/containers/: array_list.h  container_types.h
systems/core/math/: mat3.h  mat4.h  math.h  math_types.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h  vector4.cpp  vector4.h
systems/core/memory/: MallocAllocator.cpp  MallocAllocator.h  PoolAllocator.cpp  PoolAllocator.h  allocators.cpp  memory_tools.h
systems/core/subsystems/: log_manager.cpp  log_manager.h  logger.cpp  logger.h  memory_manager.cpp  memory_manager.h  subsystem_manager.cpp  subsystem_manager.h
